tests/errors/kind_float_of_int.f90
program kind_float_of_int
    implicit none
    integer(4.2) :: x
end program
